# Hardware

./: .gitignore  README.md  SEB.MD
projects/asl-led-controller/: README.md  asl_webcam.py  stm32_main.c
projects/asl-led-controller/firmware/: CMakeLists.txt  openocd.cfg  setup.sh
projects/asl-led-controller/firmware/Core/Inc/: main.h  stm32g4xx_hal_conf.h
projects/asl-led-controller/firmware/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
